# python-app

./: .replit  Dockerfile  README.md  app.py  azure-pipelines.yml  export_schema.py  main.py  pyproject.toml  requirements.txt  run.sh  run_backend.sh  schema.sql  start.sh  startup.sh
attached_assets/: Sample Data for Apps.xlsx
backend/: app.py  app_entry.py  data_processor.py  excel_handler.py  main.py  models.py  pdf_generator.py  requirements.txt
backend/sample_data/: .gitkeep
backend/static/: index.html
frontend/: Dockerfile  index.html  pubspec.yaml
frontend/lib/: main.dart  main_web.dart
frontend/lib/models/: account.dart  activity.dart  client.dart  performance.dart
frontend/lib/screens/: account_screen.dart  client_details_screen.dart  dashboard_screen.dart  import_excel_screen.dart
frontend/lib/services/: api_service.dart
frontend/lib/widgets/: account_balance_chart.dart  performance_metrics.dart  recent_activities.dart
frontend/static/: script.js  styles.css
frontend/web/: index.html  manifest.json
